--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond');
 .App {
   text-align: center;
 }
@@ -23,6 +24,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+#root{
+  font-family: 'Cormorant Garamond', serif;
+}
 
 .App-link {
   color: #61dafb;
@@ -36,3 +40,25 @@
     transform: rotate(360deg);
   }
 }
+
+.link{
+  width: 15px;
+  height: 15px;
+}
+
+.viewport100{
+  height:100vh;
+}
+
+.code{
+  background-image: url("./img/code.png");
+  background-size: cover;
+  background-position: center;
+  color:white;
+  text-align: center;
+  font-size: xx-large;
+}
+.viewport{
+  height: 70vh;
+}
+
