--- a/personal-website/src/App.css
+++ b/personal-website/src/App.css
@@ -96,7 +96,7 @@
   padding-bottom: 5vh;
 }
 .nb2{
-  padding-bottom: 1vh;
+  padding-top: 2vh;
 }
 
 .button {
@@ -138,15 +138,14 @@
   text-align: center;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
+  background-color: #DCDCDC !important;
+  color: black;
 }
 
 .button2 span {
   cursor: pointer;
-  display: inline-block;
   position: relative;
   transition: 0.5s;
-  background-color: transparent;
   border-color: #ccc;
 }
 
@@ -154,9 +153,10 @@
   content: '\00bb';
   position: absolute;
   opacity: 0;
-  top: 0;
+  top: -.25vh;
   right: -1vh;
   transition: 0.5s;
+
 }
 
 .button2:hover span {
